[gd_scene load_steps=15 format=2]

[ext_resource path="res://Environment/Humvee.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Environment/Vehicles/Humvee-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Environment/Vehicles/HumveeParts-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Environment/Vehicles/HumveeDoor.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 21 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 25, 21 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 13, 12 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=3]
resource_name = "crashed"
tracks/0/type = "value"
tracks/0/path = NodePath("Humvee:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fixed"
tracks/0/type = "value"
tracks/0/path = NodePath("Humvee:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "open_door"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Door:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 65.0 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11.0112, 1.32893 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52, 23 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12, 3 )

[node name="Humvee" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 1 )

[node name="Humvee" type="Sprite" parent="."]
position = Vector2( 10, 0 )
texture = ExtResource( 2 )
vframes = 2
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Engine" type="Sprite" parent="."]
visible = false
position = Vector2( -40, 1 )
rotation = 1.5708
texture = ExtResource( 3 )
vframes = 2
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -38, 1 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 24, 0 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -14, -9 )
shape = SubResource( 9 )

[node name="Sparks" type="Particles2D" parent="."]
position = Vector2( -44, -18 )
emitting = false
amount = 24
lifetime = 0.3
process_material = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crashed = SubResource( 3 )
anims/fixed = SubResource( 4 )

[node name="DoorAnimPlayer" type="AnimationPlayer" parent="."]
anims/open_door = SubResource( 6 )

[node name="Door" type="Node2D" parent="."]
position = Vector2( -27, 21 )

[node name="Door" type="Sprite" parent="Door"]
position = Vector2( 37, -21 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Door"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/StaticBody2D"]
position = Vector2( 12.9888, 0.539879 )
shape = SubResource( 10 )

[node name="CollectPartsArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectPartsArea"]
position = Vector2( 1, 0 )
shape = SubResource( 5 )

[node name="CollectPlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectPlayerArea"]
position = Vector2( -14, 5 )
shape = SubResource( 11 )

[node name="EnterCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerPos" type="Node2D" parent="."]
position = Vector2( -14, 9 )
[connection signal="body_entered" from="CollectPlayerArea" to="." method="_on_CollectPlayerArea_body_entered"]
[connection signal="timeout" from="EnterCooldownTimer" to="." method="_on_EnterCooldownTimer_timeout"]
